--- a/JamSesh/Base.lproj/Main.storyboard
+++ b/JamSesh/Base.lproj/Main.storyboard
@@ -821,7 +821,6 @@ and other music lovers.</string>
         <!--Details View Controller-->
         <scene sceneID="cNJ-nj-CEH">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4Dv-bm-vXA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="hg4-ae-BGh" customClass="DetailsViewController" customModule="JamSesh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="JYZ-g3-X2v">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
@@ -878,11 +877,12 @@ and other music lovers.</string>
                         <barButtonItem key="leftBarButtonItem" title="Session" id="hFx-A6-SfP">
                             <connections>
                                 <action selector="detailToSessionSegue:" destination="hg4-ae-BGh" id="TV3-ML-WyY"/>
-                                <segue destination="ywP-1K-0Jc" kind="presentation" identifier="detailToSessionSegue" id="IJq-n2-JdU"/>
+                                <segue destination="g0n-hn-EqT" kind="presentation" identifier="detailToSessionSegue" id="fC3-Gm-lQN"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Dv-bm-vXA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-2620" y="4812"/>
         </scene>
@@ -900,7 +900,7 @@ and other music lovers.</string>
                         <barButtonItem key="leftBarButtonItem" title="Session" id="EOC-J0-vzZ">
                             <connections>
                                 <action selector="sessionButtonPressed:" destination="FxF-le-g3x" id="G5o-FY-VWZ"/>
-                                <segue destination="ywP-1K-0Jc" kind="presentation" identifier="chatToSessionSegue" id="ouC-Qm-tUp"/>
+                                <segue destination="g0n-hn-EqT" kind="presentation" identifier="chatToSessionSegue" id="96y-xN-OIj"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="0" id="Au6-XG-tAJ">
@@ -954,7 +954,7 @@ and other music lovers.</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TITLE:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuE-zy-jic">
-                                <rect key="frame" x="29.333333333333332" y="48" width="48.666666666666671" height="20.333333333333329"/>
+                                <rect key="frame" x="29.333333333333332" y="92" width="48.666666666666671" height="20.333333333333329"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -973,7 +973,7 @@ and other music lovers.</string>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7uY-ob-JIZ">
-                                <rect key="frame" x="153" y="48" width="241" height="30"/>
+                                <rect key="frame" x="153" y="92" width="241" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -1587,6 +1587,7 @@ and other music lovers.</string>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Lkr-T2-A1y" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4h2-SO-OqF">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -1632,7 +1633,7 @@ and other music lovers.</string>
         <image name="settings_24px_outlined-1" width="25" height="25"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="IJq-n2-JdU"/>
+        <segue reference="fC3-Gm-lQN"/>
         <segue reference="aHY-Sa-O7c"/>
     </inferredMetricsTieBreakers>
 </document>
